--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="flipkart clone , clone of flipkart"
     <title>CLONE flipkart</title>
     <link href="index.css" rel="stylesheet">
     <link rel="stylesheet" href="common.css">
